--- a/US College data.html
+++ b/US College data.html
@@ -24,24 +24,24 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="ex1_files/libs/clipboard/clipboard.min.js"></script>
-<script src="ex1_files/libs/quarto-html/quarto.js"></script>
-<script src="ex1_files/libs/quarto-html/popper.min.js"></script>
-<script src="ex1_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="ex1_files/libs/quarto-html/anchor.min.js"></script>
-<link href="ex1_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="ex1_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="ex1_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="ex1_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="ex1_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
-<script src="ex1_files/libs/quarto-dashboard/quarto-dashboard.js"></script>
-<script src="ex1_files/libs/quarto-dashboard/stickythead.js"></script>
-<script src="ex1_files/libs/quarto-dashboard/datatables.min.js" kdttablesentinel="true"></script>
-<script src="ex1_files/libs/quarto-dashboard/pdfmake.min.js" kdttablesentinel="true"></script>
-<script src="ex1_files/libs/quarto-dashboard/vfs_fonts.js" kdttablesentinel="true"></script>
-<script src="ex1_files/libs/quarto-dashboard/web-components.js" type="module"></script>
-<script src="ex1_files/libs/quarto-dashboard/components.js"></script>
-<link href="ex1_files/libs/quarto-dashboard/datatables.min.css" rel="stylesheet" kdttablesentinel="true">
+<script src="US College data_files/libs/clipboard/clipboard.min.js"></script>
+<script src="US College data_files/libs/quarto-html/quarto.js"></script>
+<script src="US College data_files/libs/quarto-html/popper.min.js"></script>
+<script src="US College data_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="US College data_files/libs/quarto-html/anchor.min.js"></script>
+<link href="US College data_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="US College data_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="US College data_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="US College data_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="US College data_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="US College data_files/libs/quarto-dashboard/quarto-dashboard.js"></script>
+<script src="US College data_files/libs/quarto-dashboard/stickythead.js"></script>
+<script src="US College data_files/libs/quarto-dashboard/datatables.min.js" kdttablesentinel="true"></script>
+<script src="US College data_files/libs/quarto-dashboard/pdfmake.min.js" kdttablesentinel="true"></script>
+<script src="US College data_files/libs/quarto-dashboard/vfs_fonts.js" kdttablesentinel="true"></script>
+<script src="US College data_files/libs/quarto-dashboard/web-components.js" type="module"></script>
+<script src="US College data_files/libs/quarto-dashboard/components.js"></script>
+<link href="US College data_files/libs/quarto-dashboard/datatables.min.css" rel="stylesheet" kdttablesentinel="true">
 
 
 </head>
@@ -150,11 +150,11 @@ grid-auto-rows: minmax(0, 1fr);">
 
 <div class="tab-content html-fill-item html-fill-container" data-tabset-id="card-tabset-5"><div class="tab-pane active show html-fill-item html-fill-container" role="tabpanel" id="card-tabset-5-1"><div class="card-body html-fill-item html-fill-container" data-title="Box plot">
 <div class="cell-output-display html-fill-item html-fill-container">
-<img src="ex1_files/figure-html/unnamed-chunk-2-1.png" class="img-fluid quarto-dashboard-img-contain">
+<img src="US-College-data_files/figure-html/unnamed-chunk-2-1.png" class="img-fluid quarto-dashboard-img-contain">
 </div>
 </div></div><div class="tab-pane html-fill-item html-fill-container" role="tabpanel" id="card-tabset-5-2"><div class="card-body html-fill-item html-fill-container" data-title="Scatter plot Analysis">
 <div class="cell-output-display html-fill-item html-fill-container">
-<img src="ex1_files/figure-html/unnamed-chunk-3-1.png" class="img-fluid quarto-dashboard-img-contain">
+<img src="US-College-data_files/figure-html/unnamed-chunk-3-1.png" class="img-fluid quarto-dashboard-img-contain">
 </div>
 </div></div></div><bslib-tooltip placement="auto" bsoptions="[]" data-require-bs-version="5" data-require-bs-caller="tooltip()">
     <template>Expand</template>
@@ -169,11 +169,11 @@ grid-auto-rows: minmax(0, 1fr);">
 
 <div class="tab-content html-fill-item html-fill-container" data-tabset-id="card-tabset-6"><div class="tab-pane active show html-fill-item html-fill-container" role="tabpanel" id="card-tabset-6-1"><div class="card-body html-fill-item html-fill-container" data-title="Histogram of Grad.Rate">
 <div class="cell-output-display html-fill-item html-fill-container">
-<img src="ex1_files/figure-html/unnamed-chunk-4-1.png" class="img-fluid quarto-dashboard-img-contain">
+<img src="US-College-data_files/figure-html/unnamed-chunk-4-1.png" class="img-fluid quarto-dashboard-img-contain">
 </div>
 </div></div><div class="tab-pane html-fill-item html-fill-container" role="tabpanel" id="card-tabset-6-2"><div class="card-body html-fill-item html-fill-container" data-title="Line Plot">
 <div class="cell-output-display html-fill-item html-fill-container">
-<img src="ex1_files/figure-html/unnamed-chunk-5-1.png" class="img-fluid quarto-dashboard-img-contain">
+<img src="US-College-data_files/figure-html/unnamed-chunk-5-1.png" class="img-fluid quarto-dashboard-img-contain">
 </div>
 </div></div></div><bslib-tooltip placement="auto" bsoptions="[]" data-require-bs-version="5" data-require-bs-caller="tooltip()">
     <template>Expand</template>
